crates/service/tests/code_action/snapshots/features__code_action__join_types__local.snap
---
source: crates/service/tests/code_action/join_types.rs
expression: response
---
[
  {
    "title": "Join locals",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 10
              },
              "end": {
                "line": 2,
                "character": 37
              }
            },
            "newText": "(local i32 i64 f64)"
          }
        ]
      }
    }
  }
]
