crates/service/tests/code_action/snapshots/features__code_action__join_types__result.snap
---
source: crates/service/tests/code_action/join_types.rs
expression: response
---
[
  {
    "title": "Join results",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 10
              },
              "end": {
                "line": 2,
                "character": 39
              }
            },
            "newText": "(result i32 i64 f64)"
          }
        ]
      }
    }
  }
]
